Fix global CORS for Vercel